# mc-lsp

./: Cargo.toml
editor/vscode/: .gitignore  .vscodeignore  package-lock.json  package.json  tsconfig.json
editor/vscode/preview/: Cargo.toml  frag.glsl  index.js  render.ts  tsconfig.json  vert.glsl  webpack.config.js
editor/vscode/preview/src/: event.rs  frag.glsl  json.rs  lib.rs  model.rs  render.rs  vert.glsl
editor/vscode/src/: extension.ts  preview.ts
mc-analysis/: Cargo.toml
mc-analysis/src/: completion.rs  database.rs  highlight.rs  lib.rs
mc-analysis/src/tests/: completion.rs  mod.rs
mc-build/: Cargo.toml  mc.ungram
mc-build/src/: ast_src.rs  sourcegen_ast.rs
mc-gradle/: Cargo.toml
mc-gradle/src/: lib.rs
mc-hir/: Cargo.toml
mc-hir/src/: diagnostic.rs  lib.rs  model.rs  parse.rs  path.rs
mc-hir/src/blockstate/: mod.rs  parse.rs  validate.rs
mc-hir/src/model/: mod.rs  parse.rs  validate.rs
mc-lsp/: Cargo.toml
mc-lsp/src/: files.rs  global.rs  info.rs  main.rs  progress.rs  search.rs
mc-lsp/src/handler/: mod.rs  notification.rs  request.rs
mc-message/: Cargo.toml
mc-message/src/: lib.rs
mc-parser/: Cargo.toml  build.rs
mc-parser/src/: event.rs  lib.rs  main.rs  token.rs
mc-parser/src/grammar/: entry_point.rs  json.rs  mod.rs
mc-parser/src/tests/: inline.rs  mod.rs
mc-parser/src/tests/syntax/: simple.rs
mc-source/: Cargo.toml
mc-source/src/: lib.rs  path.rs  resolved.rs  source_root.rs
mc-syntax/: Cargo.toml  build.rs
mc-syntax/src/: lib.rs  node.rs  parse.rs
mc-syntax/src/ast/: ext.rs  mod.rs
mc-test/: Cargo.toml
mc-test/src/: lib.rs
