[workspace]
resolver = "2"
members = [
  "mc-test",
  "mc-build",
  "mc-source",
  "mc-parser",
  "mc-syntax",
  "mc-analysis",
  "mc-lsp",
]

[workspace.dependencies]
mc-test = { path = "mc-test" }
mc-build = { path = "mc-build" }
mc-parser = { path = "mc-parser" }
mc-source = { path = "mc-source" }
mc-analysis = { path = "mc-analysis" }
