[workspace]
resolver = "2"
members = [
  "mc-test",
  "mc-build",
  "mc-source",
  "mc-parser",
  "mc-syntax",
  "mc-hir",
  "mc-analysis",
  "mc-lsp",
]

[workspace.dependencies]
mc-test = { path = "mc-test" }
mc-build = { path = "mc-build" }
mc-parser = { path = "mc-parser" }
mc-syntax = { path = "mc-syntax" }
mc-source = { path = "mc-source" }
mc-hir = { path = "mc-hir" }
mc-analysis = { path = "mc-analysis" }
