[package]
name = "mc-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
la-arena = "0.3.1"
salsa = "0.17.0-pre.2"
line-index = "0.1.1"

mc-source.workspace = true
mc-syntax.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mc-test.workspace = true
