[package]
name = "mc-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.11"
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde_json = "1.0.111"
parking_lot = "0.12.1"
fern = "0.6.2"
line-index = "0.1.2"
la-arena = "0.3.1"

mc-analysis.workspace = true
mc-gradle.workspace = true
mc-source.workspace = true
mc-message.workspace = true
serde = { version = "1.0.215", features = ["derive"] }
