[package]
name = "mc-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
la-arena = "0.3.1"
rowan = "0.15.16"
url = "2.5.0"
mc-parser.workspace = true

[build-dependencies]
mc-build.workspace = true
