[package]
edition = "2021"
name = "mc-preview"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.19.0"
console_log = "1.0.0"
js-sys = "0.3.72"
log = "0.4.22"
nalgebra = "0.33.2"
serde = { version = "1.0.214", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"

mc-message.workspace = true

[dependencies.web-sys]
version = "0.3.72"
features = [
  'Document',
  'Element',
  'CssStyleDeclaration',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window',
]
